test/data/golden/fail/no_alias_in_body.sv0
fn main() -> unit {
  let a: i32 = 1;
  let b: i32 = 2;
  let _x: bool = no_alias(&a, &b);
}
